--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^8.0.1",
     "@next/font": "^13.4.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
