--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
+    "eslint-config-next": "^14.0.3",
+    "next": "^14.0.3",
     "next-auth": "^4.23.1",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
