--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "^14.0.3",
+    "framer-motion": "^10.16.5",
     "next": "^14.0.3",
     "next-auth": "^4.23.1",
     "postcss": "8.4.25",
