--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.5",
+    "github-calendar": "^2.3.2",
     "next": "^14.0.3",
     "next-auth": "^4.23.1",
     "postcss": "8.4.25",
